# reddit-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml  reddit-mcp.plugin  server.json  server.py
.github/workflows/: publish.yml
extension/: manifest.json
plugin/reddit-mcp/: .mcp.json  README.md  pyproject.toml  server.py
plugin/reddit-mcp/.claude-plugin/: plugin.json
tests/: test_retry.py
