[project]
name = "reddit-mcp"
version = "1.1.0"
description = "Local MCP server that fetches and refines Reddit (and other JSON) content for Claude."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
reddit-mcp = "server:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
